--- a/views/index.ejs
+++ b/views/index.ejs
@@ -27,7 +27,12 @@
    <!-- Navbar end -->
 
    <div class="container">
-       <h1>Upload Image</h1>
+       <h1> Upload Image </h1>
+       <% if (typeof msg !== 'undefined'){ %>
+           <%= msg %>
+       <% } else {%>
+           <%= msg='' %>
+       <% } %>
        <!-- upload form -->
        <form action="/upload" method = "POST" enctype="multipart/form-data">
            <div class="file-field input-field">
