--- a/views/index.ejs
+++ b/views/index.ejs
@@ -26,8 +26,9 @@
    </div>
    <!-- Navbar end -->
 
+<!-- upload image -->
    <div class="container">
-       <h1> Upload Image </h1>
+       <h1>Image Upload </h1>
        <% if (typeof msg !== 'undefined'){ %>
            <%= msg %>
        <% } else {%>
@@ -47,7 +48,17 @@
            <button type="submit" class="btn">Submit</button>
        </form>     
        <!-- Upload form end  -->
+       <hr>
+       <br>
+       <% if (typeof file !== 'undefined'){ %>
+          <img src="<%= file %>" class="responsive-img" >
+       <% } else {%>
+           <%= file='' %>
+       <% } %>  
+       <!-- Upload form end  -->
    </div>
+
+
   
    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
